--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Clinton Gormley <drtech@cpan.org>'
 build_requires:
   Test::More: 0
+  Test::Most: 0
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
@@ -16,11 +17,11 @@ name: ElasticSearch-SearchBuilder
 provides:
   ElasticSearch::SearchBuilder:
     file: lib/ElasticSearch/SearchBuilder.pm
-    version: 0.01
+    version: 0.02
 requires:
   Scalar::Util: 0
 resources:
   bugtracker: https://github.com/clintongormley/ElasticSearch-SearchBuilder/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/clintongormley/ElasticSearch-SearchBuilder/
-version: 0.01
+version: 0.02
