--- a/META.yml
+++ b/META.yml
@@ -3,8 +3,9 @@ abstract: 'A Perlish compact query language for ElasticSearch'
 author:
   - 'Clinton Gormley <drtech@cpan.org>'
 build_requires:
+  Test::Differences: 0
+  Test::Exception: 0
   Test::More: 0
-  Test::Most: 0
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
@@ -17,11 +18,11 @@ name: ElasticSearch-SearchBuilder
 provides:
   ElasticSearch::SearchBuilder:
     file: lib/ElasticSearch/SearchBuilder.pm
-    version: 0.02
+    version: 0.03
 requires:
   Scalar::Util: 0
 resources:
   bugtracker: https://github.com/clintongormley/ElasticSearch-SearchBuilder/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/clintongormley/ElasticSearch-SearchBuilder/
-version: 0.02
+version: 0.03
