Import of DRTECH/ElasticSearch-SearchBuilder-0.11 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.11
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.11.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,7 @@ exclude_filename = README.pod
 [CheckChangeLog]
 [ConfirmRelease]
 [UploadToCPAN]
-[ModuleBuild::RequireXS]
+[MakeMaker]
 
 [AutoPrereqs]
 
