--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,11 @@ abstract: 'A Perlish compact query language for ElasticSearch'
 author:
   - 'Clinton Gormley <drtech@cpan.org>'
 build_requires:
-  Module::Build: 0.3601
   Test::Differences: 0
   Test::Exception: 0
   Test::More: 0.96
 configure_requires:
-  Module::Build: 0.3601
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 4.300000, CPAN::Meta::Converter version 2.110930'
 license: perl
@@ -24,4 +23,4 @@ requires:
 resources:
   bugtracker: https://github.com/clintongormley/ElasticSearch-SearchBuilder/issues
   repository: git://github.com/clintongormley/ElasticSearch-SearchBuilder.git
-version: 0.10
+version: 0.11
