--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,8 @@ abstract: 'A Perlish compact query language for ElasticSearch'
 author:
   - 'Clinton Gormley <drtech@cpan.org>'
 build_requires:
-  Test::Differences: 0
+  Data::Dump: 0
+  Test::Deep: 0
   Test::Exception: 0
   Test::More: 0.96
 configure_requires:
@@ -23,4 +24,4 @@ requires:
 resources:
   bugtracker: https://github.com/clintongormley/ElasticSearch-SearchBuilder/issues
   repository: git://github.com/clintongormley/ElasticSearch-SearchBuilder.git
-version: 0.17
+version: 0.18
