Import of DRTECH/ElasticSearch-SearchBuilder-0.19 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.19
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.19.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,9 @@ repo = ElasticSearch-SearchBuilder
 
 [GatherDir]
 exclude_filename = README.pod
+exclude_match    = ^doc
+exclude_match    = cover_db
+exclude_filename = cpanfile
 
 [PruneCruft]
 [VersionFromModule]
@@ -19,6 +22,9 @@ exclude_filename = README.pod
 [MetaYAML]
 [License]
 [ReadmeFromPod]
+[CPANFile]
+[CopyFilesFromBuild]
+copy = cpanfile
 
 [ExtraTests]
 [PodSyntaxTests]
